# MyWork

MyWork/: AiMadeADungeon.py  ChessNet.py  ChessProject.py  FileHandlingDataProcessing.py  HelloWorld.py  HomeworkImports.py  JupyterChessEvaluator.ipynb  MathHomework.py  PythonGUITesting.py  THE 5 ROOM DUNGEON 2.py  THE 5 ROOM DUNGEON.py  TransportProblemPython.ipynb  VacuumeAgent.py  datastructs.py  firstTensorflowProgram.py  learningTest.py  linearprogramming.py  notebookclasswork.ipynb  rngandsorting.py  search.py  secondTensorflowProgram.py  tensorflowtesting.py
MyWork/5RoomDungeon2/: README.md  pyproject.toml
MyWork/5RoomDungeon2/src/5RoomDungeon2/: 5RoomDungeon2.py
MyWork/5RoomDungeon2/src/5RoomDungeon2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
MyWork/CSVS/: IntroToArtificialIntelHomeworks.py  ratings.csv  upgradedModel.py
MyWork/__pycache__/: pokertester.py
MyWork/ccg/: LICENSE  pyproject.toml
MyWork/ccg/src/ccg/: THE 5 ROOM DUNGEON.py
MyWork/ccg/src/ccg.egg-info/: PKG-INFO  SOURCES.txt
