[build-system]
requires = ["hatchling]
build-backend = "hatchling.build"

[project]
name = "ccg"
version = "1.0"
authors = [
    {name="Curtis Canby",email="ccanby01@rams.shepherd.edu"}
]
description = "A decent game"
readme = "README.md"
requires-pyhton = ">=1.0"
classifires = [
    "Programming Language :: Python :: 3",
    "License :: MIT License,
    "Operating System :: OS Independant",
]
dependencies = []
